page/shared: footer created for rootLayout

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,9 @@
 :root {
   --header-height: 2rem;
-  --first-color: hsl(28, 88%, 62%);
+  --first-color: #2663ff;
   --title-color: hsl(0, 0%, 95%);
   --text-color: hsl(0, 0%, 75%);
-  --body-color: hsl(0, 0%, 6%);
+  --body-color: #110b34;
   --body-font: "Montserrat", sans-serif;
   --second-font: "Dancing Script", cursive;
   --h2-font-size: 1.25rem;
@@ -12,4 +12,3 @@
   --z-tooltip: 10;
   --z-fixed: 100;
 }
-
