--- a/src/index.css
+++ b/src/index.css
@@ -31,6 +31,8 @@
   margin-inline: auto;
 }
 
+/*! dynamic elevator cart */
+
 .elevator-card {
   min-height: 28rem;
   text-align: center;
@@ -38,6 +40,7 @@
   width: 80%;
 }
 
+/*! up and down arraw button */
 .button-section {
   width: 20%;
   background-color: white;
@@ -50,4 +53,19 @@
   font-size: 4rem;
   color: rgb(31, 35, 39);
   /* background-color: #2663ff; */
+  cursor: pointer;
+}
+
+.active-elevator {
+  background: linear-gradient(180deg, #8e8076, #9f5c3a);
+}
+
+.elevator-text {
+  background-color: #feeacd;
+  padding: 1rem;
+  font-size: 16px;
+  color: black;
+  width: 3rem;
+  margin-inline: auto;
+  border-radius: 6px;
 }
