--- a/src/index.css
+++ b/src/index.css
@@ -44,6 +44,7 @@
 .button-section {
   width: 20%;
   background-color: white;
+  color: #969494;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -56,8 +57,17 @@
   cursor: pointer;
 }
 
+/*! active elevator color */
 .active-elevator {
   background: linear-gradient(180deg, #8e8076, #9f5c3a);
+  min-height: 25rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 1em;
+  border: 2px solid black;
+  margin-top: 0px;
+  border-top: 0px;
 }
 
 .elevator-text {
